# PHX

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  _test.py  _test_model_1.py  _testing_HBJSON_to_METr.py  _testing_HBJSON_to_PHPP.py  _testing_HBJSON_to_WUFI.py  _testing_WUFI_to_PHX.py  _testing_from_WUFI.py  _testing_to_PHPP.py  _testing_to_WUFI.py  deploy.sh  dev-requirements.txt  output.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.txt  tests.txt
.claude/: settings.local.json
.claude/commands/: cleanup.md  code-review.md
.codex/: hooks.json
.github/prompts/: cleanup.prompt.md
.github/workflows/: ci.yaml  notify-hub.yml
PHX/: .index.md  _hbjson_to_phpp.sh  hbjson_to_metr_json.py  hbjson_to_phpp.py  hbjson_to_ppp.py  hbjson_to_wufi_xml.py  run.py
PHX/PHPP/: README.md  __init__.py  phpp_app.py
PHX/from_HBJSON/: .index.md  README.md  __init__.py  _type_utils.py  cleanup.py  cleanup_merge_faces.py  create_assemblies.py  create_building.py  create_elec_equip.py  create_foundations.py  create_geometry.py  create_hvac.py  create_project.py  create_rooms.py  create_schedules.py  create_shades.py  create_shw.py  create_shw_devices.py  create_variant.py  read_HBJSON_file.py
PHX/from_WUFI_XML/: .index.md  phx_converter.py  phx_schemas.py  read_WUFI_XML_file.py  wufi_file_schema.py  wufi_file_types.py
PHX/model/: .index.md  README.md  __init__.py  assembly_pathways.py  building.py  certification.py  climate.py  components.py  constructions.py  elec_equip.py  geometry.py  ground.py  phx_site.py  project.py  schedules.py  shades.py  spaces.py  utilization_patterns.py
PHX/to_METr_JSON/: __init__.py  metr_builder.py  metr_converter.py  metr_json_to_file.py  metr_schemas.py
PHX/to_PHPP/: phpp_app.py  xl_app.py  xl_data.py
PHX/to_PPP/: __init__.py  ppp_builder.py  ppp_schemas.py  ppp_sections.py  ppp_txt_to_file.py
PHX/to_WUFI_XML/: .index.md  README.md  __init__.py  _bug_fixes.py  xml_builder.py  xml_converter.py  xml_schemas.py  xml_txt_to_file.py  xml_writables.py
PHX/xl/: __init__.py  xl_app.py  xl_data.py  xl_typing.py
context/: ARCHITECTURE.md  AUTODOC.md  CODING_STANDARDS.md  PRD.md  README.md  TECH_STACK.md  architecture.md  exporter-patterns.md  model-hierarchy.md
docs/: README.md  getting-started.md  index.md  nav.yml  packages.md  test_power.py
docs/dev/: architecture.md  exporter-patterns.md
docs/reference/: phpp-field-mapping.md  phx-model-reference.md  wufi-xml-schema.md
planning/: .instructions.md  README.md  STATUS.md
planning/archive/: README.md
planning/features/: .instructions.md
planning/refactor/: dwelling-zone-decoupling.md
scripts/perf/: README.md  bench_interop.py  perf_paths.py  profile_export.py  profiling.py  readback_spec_en_v10.6.json  readback_verify.py  record_replay_fixture.py
tests/: .index.md  conftest.py
tests/_reference_xml/: 100SCD_DD_TF_080422_with_shade.xml  Arverne_Proposed_NoWindows.xml  Default_Model_Single_Zone.xml  Default_Room_Multiple_Zones_with_Apertures.xml  Default_Room_Multiple_Zones_with_Apertures_Single_BldgSegment.xml  Default_Room_Multiple_Zones_with_Apertures_default_Climate.xml  Default_Room_Multiple_Zones_with_PHI_Cert.xml  Default_Room_Single_Zone_with_Apertures.xml  Default_Room_Single_Zone_with_Rooms.xml  Default_Room_Single_Zone_with_Shades.xml  Default_Room_Single_Zone_with_Ventilation.xml  Multi_Room_Complete.xml  School.xml  School.xml.res  test_apartment.xml  test_apartment_from_rh.xml  test_apartment_ip.xml  test_apartment_si.xml
tests/_regenerated_xml/: Arverne_Proposed_NoWindows.xml  Arverne_Proposed_NoWindows_10_31_14_18_14.xml  Arverne_Proposed_NoWindows_10_31_14_35_39.xml  Arverne_Proposed_NoWindows_10_31_15_0_5.xml  School.xml  School_7_16_17_34_4.xml  _la_mora.xml  _ridgeway.xml  test_apartment.xml  test_apartment_from_rh.xml  test_apartment_ip.xml  test_apartment_si.xml
tests/_source_gh/: hbph_test_models.gh
tests/_source_hbjson/: 100SCD_DD_TF_080422_with_shade.hbjson  Default_Model_Single_Zone.hbjson  Default_Room_Multiple_Zones_with_Apertures.hbjson  Default_Room_Multiple_Zones_with_Apertures_Single_BldgSegment.hbjson  Default_Room_Multiple_Zones_with_Apertures_default_Climate.hbjson  Default_Room_Multiple_Zones_with_PHI_Cert.hbjson  Default_Room_Single_Zone.json  Default_Room_Single_Zone_with_Apertures.hbjson  Default_Room_Single_Zone_with_Rooms.hbjson  Default_Room_Single_Zone_with_Shades.hbjson  Default_Room_Single_Zone_with_Ventilation.hbjson  Multi_Room_Complete.hbjson  test_multiple_cooling.hbjson
tests/_test_reference_files_hbjson/: Default_Model_Single_Zone.hbjson  Default_Room_Single_Zone.json  Multi_Room_Complete.hbjson
tests/_test_reference_files_xml/: Default_Model_Single_Zone.xml  Multi_Room_Complete.xml  Multi_Room_Complete_10_25_17_9_4.xml  Multi_Room_Complete_2_18_7_57_37.xml  Multi_Room_Complete_7_16_17_33_42.xml
tests/_wufi_xml_from_gh/: Multi_Room_Complete.xml  Multi_Room_Complete_4_21_14_19_3.xml  Multi_Room_Complete_4_21_14_48_12.xml  Multi_Room_Complete_4_21_14_48_7.xml  Multi_Room_Complete_4_22_10_40_30.xml  Multi_Room_Complete_4_22_10_41_46.xml  Multi_Room_Complete_4_22_10_54_4.xml  Multi_Room_Complete_4_23_11_58_43.xml  Multi_Room_Complete_4_5_17_7_16.xml  Multi_Room_Complete_5_20_17_30_30.xml
tests/reference_files/: .index.md
tests/test_PHPP/: test_shape_file.py  test_xl_app.py  test_xl_data_XlItem.py  test_xl_data_merge_rows.py  test_xl_data_raw_write.py
tests/test_from_WUFI/: conftest.py
tests/test_model/: tests_shades.py
tests/test_scripts_perf/: conftest.py  test_profiling.py  test_readback_verify.py
tests/test_to_PHPP/: test_xl_app.py  test_xl_data.py  test_xl_data_XlItem_List.py  test_xl_data_colums.py
tests/test_to_PPP/: test_ppp_builder.py  test_ppp_schemas.py  test_ppp_sections.py
tests/test_to_WUFI_xml/: _utils.py  test_xml_builder.py  test_xml_converter.py  test_xml_writables.py
tests/test_xl_replay/: fake_xl_framework.py  test_fake_xl_framework.py  (+1 more)
(+341 files in other folders)
