# -- Build System ---
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# -- Project Metadata ---
[project]
name = "PHX"
version = "1.56.9"
description = "Input / Output Passive House building energy model data."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "PH-Tools", email = "phtools@bldgtyp.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "honeybee-core>=1.64.9",
    "honeybee-energy>=1.116.103",
    "honeybee-ph>=1.32.0",
    "pydantic>=2.0",
    "PH-units>=1.5.26",
    "rich",
    "xlwings",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "isort",
    "pytest",
    "pytest-cov",
    "rich",
]

[project.urls]
Homepage = "https://github.com/PH-Tools/PHX"

# -- Setuptools Configuration ---
[tool.setuptools.packages.find]
include = ["PHX*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"PHX" = ["**/*.json", "**/*.sh"]

# -- Version Bumping ---
[tool.bumpversion]
current_version = "1.56.9"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: version {current_version} -> {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

# -- Testing ---
[tool.pytest.ini_options]
filterwarnings = [
    "ignore",                                                   #error
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

# -- Coverage ---
[tool.coverage.run]
# --- For testing...
command_line = "-m pytest . tests"
source = ["PHX"]
# ---
branch = true
cover_pylib = false
omit = ["*/__init__.py", "*.venv/*", "*.venv_mbair/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "_coverage_html"

# -- Code Formatting ---
[tool.black]
line-length = 120
# Exclude Python 2.7 compatibility file
extend-exclude = "PHX/run.py"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
# Exclude Python 2.7 compatibility file
extend_skip = ["PHX/run.py"]

# -- Linting ---
[tool.ruff]
line-length = 120
target-version = "py310"
# Exclude Python 2.7 compatibility file from all ruff checks
exclude = ["PHX/run.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20", "SIM"]
extend-ignore = [
    "F403",   # Unable to detect undefined names (from ... import *)
    "F405",   # Name may be undefined, or defined from star imports
    "N802",   # Function name should be lowercase
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "N815",   # Variable in class scope should not be mixedCase
    "N816",   # Variable in global scope should not be mixedCase
    "N999",   # Invalid module name (many test files use PascalCase)
    "N801",   # Class name should use CapWords (intentional for some XML/typing classes)
    "E501",   # Line too long (handled by black)
    "E711",   # Comparison to None (acceptable in tests)
    "E712",   # Comparison to True/False (acceptable in tests)
    "E722",   # Bare except (sometimes necessary)
    "T201",   # print statements (used for debugging/logging)
    "B017",   # pytest.raises(Exception) is intentional in tests
    "B904",   # raise without from (not always needed)
    "UP007",  # Use X | Y (keeping Union for clarity/compatibility)
    "UP035",  # typing.Dict deprecated (keeping for compatibility)
    "UP045",  # Use X | None (keeping Optional for clarity)
    "SIM102", # Collapsible if (sometimes clearer separate)
    "SIM105", # Use contextlib.suppress (not always clearer)
]

[tool.ruff.lint.per-file-ignores]
# Allow PascalCase functions in XML schema files (they match XML/C# structure)
"**/xml_schemas.py" = ["N802", "B018", "SIM108", "A001"]
# Allow PascalCase in XML writable classes
"**/xml_writables.py" = ["N802", "N815"]
# Test files can have more relaxed rules
"tests/**/*.py" = ["F403", "F405", "F841"]
# Python 2.7 compatibility file - ignore all modernization checks
"**/run.py" = ["F401", "SIM105", "SIM210", "UP009", "UP010", "UP032"]
# Exception naming in PHPP is intentional
"**/io_exceptions.py" = ["N818"]
"**/xl_app.py" = ["N818", "SIM105"]
# Import shadowing is intentional (rich print)
"**/phx_schemas.py" = ["A004"]
# Type variable shadowing in WUFI parser (from XML data)
"**/wufi_file_types.py" = ["A001"]
# Pydantic v1 validators use 'cls' not 'self' (N805), and other intentional patterns
"**/wufi_file_schema.py" = ["B018", "N805"]
# Module imports after logging setup
"**/create_variant.py" = ["E402"]
