[semantic_release]
version_variable = PHX/__init__.py:__version__

[bdist_wheel]
universal = 1

[metadata]
author=PH-Tools
author_email=phtools@bldgtyp.com
url=https://github.com/PH-Tools/PHX
license=GPLv3+
license_files = LICENSE
name = PHX
description = Input / Output Passive House building energy model data.
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests*

[egg_info]
tag_build = 
tag_date = 0